@@ -1,24 +1,0 @@
-2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
-
-	* init.c: More warnings removed.
-
-2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
-
-	* Makefile, init.c: Now compiles reasonably cleanly with CVS head.
-
-2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
-
-	* init.c, system.h: confdefs.h should be rtems/confdefs.h
-
-2007-06-21	Joel Sherrill <joel.sherrill@OARcorp.com>
-
-	* init.c: Replace CONFIGURE_TEST_XXX with CONFIGURE_APPLICATION_XXX.
-
-2003-01-28	Joel Sherrill <joel@OARcorp.com>
-
-	* init.c: Increase number of file descriptors and use IMFS instead of
-	mini-IMFS as filesystem.
-
-2000-12-14	Joel Sherrill <joel@OARcorp.com>
-
-	* ChangeLog: New file.
